# bully

./: .bully.yml  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  bully  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: bully-evaluator.md  bully-scheduler.md
bench/: history.jsonl  run_skill_evals.py
bench/fixtures/01-script-only-small-diff/: config.yml  fixture.json  target.py
bench/fixtures/02-ast-only-small-diff/: config.yml  fixture.json  target.ts
bench/fixtures/03-semantic-only-small-diff/: config.yml  fixture.json  target.py
bench/fixtures/04-mixed-engines/: config.yml  fixture.json  target.py
bench/fixtures/05-big-extends-chain/: config.yml  fixture.json  grandparent.yml  parent.yml
bench/fixtures/06-many-semantic-rules/: config.yml  fixture.json  target.py
bench/fixtures/07-large-diff/: config.yml  fixture.json
bench/fixtures/08-auto-generated-skip/: config.yml  (+1 more)
docs/: design.md  harness-engineering-review.md  rule-authoring.md  rule-config.md  telemetry.md
hooks/: hook.sh  hooks.json
pipeline/: analyzer.py  bench.py  hook.sh  pipeline.py  rule_runner.py
pipeline/tests/: test_analyzer_semantic.py  test_ast_engine.py  test_bench.py  test_bully_subcommands.py  test_cant_match_filters.py  test_capabilities.py  test_coverage.py  test_diff_context.py  test_doctor.py  test_evaluator_payload_format.py  test_executor.py  test_explain.py  test_guide_explain.py  test_hook_shell.py  test_manual_cli.py  test_output_adapters.py  test_parser.py  test_parser_execution.py  test_parser_hardening.py  test_pipeline.py  test_rule_context_include.py  test_rule_runner.py  test_scope_absolute_path_regression.py  test_skip_config.py  test_stop_session_rules.py  test_subagent_stop_telemetry.py  test_telemetry.py  test_trust_gate.py  test_trust_gate_stop.py  test_validate_cli.py
scripts/: dogfood.sh  lint.sh
skills/bully/: SKILL.md
skills/bully-author/: SKILL.md
skills/bully-init/: SKILL.md
skills/bully-review/: SKILL.md
src/bully/: __init__.py
tests/: conftest.py  test_analyzer.py  test_analyzer_semantic.py  test_ast_engine.py  test_baseline.py  test_bench.py  test_bully_subcommands.py  test_cant_match_filters.py  test_capabilities.py  test_cli.py  test_config_extends.py  test_coverage.py  test_debt.py  test_diff_context.py  test_doctor.py  test_evaluator_payload_format.py  test_executor.py  test_explain.py  test_guide_explain.py  test_hook_shell.py  test_log_verdict.py  test_manual_cli.py  test_output_adapters.py  test_output_mode_config.py  test_parser.py  test_parser_continuation.py  test_parser_execution.py  test_parser_hardening.py  test_parser_properties.py  test_per_line_disables.py  test_pipeline.py  test_rule_context_include.py  test_rule_runner.py  test_scope_absolute_path_regression.py  test_session_start.py  test_short_circuit.py  test_skip_config.py  test_stderr_format.py  test_stop_session_rules.py  test_strict_flag.py  (+6 more)
tests/fixtures/: basic-config.yml  clean.php  groups4-0.4.0-log.jsonl  multi-rule-config.yml  tricky-config.yml  violation.php
(+30 files in other folders)
