[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bully"
version = "0.1.0"
description = "Agent-native linting pipeline for Claude Code"
requires-python = ">=3.10"
authors = [{ name = "dynamik-dev" }]
# Runtime is deliberately stdlib-only. This list stays empty.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "shellcheck-py>=0.10.0",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
]
bench = ["anthropic>=0.40"]

[project.scripts]
bully = "pipeline.pipeline:main"

[tool.setuptools]
# `pip install -e .` makes the `pipeline` package importable so the
# `bully` console script can resolve `pipeline.pipeline:main`. The hook
# (`pipeline/hook.sh`) still invokes `pipeline.py` by absolute path -- a
# console script may not be on $PATH inside the Claude Code hook env.
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["pipeline/.pytest_cache", "bench/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long -- not critical, formatter handles obvious cases
    "SIM105", # contextlib.suppress: try/except is fine and stdlib-clearer
]

[tool.ruff.lint.per-file-ignores]
"pipeline/tests/*" = ["E402"]  # tests adjust sys.path before importing

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
