[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bully"
version = "0.8.2"
description = "Hybrid agent-harness sensor for Claude Code"
requires-python = ">=3.10"
authors = [{ name = "dynamik-dev" }]
# Runtime is deliberately stdlib-only. This list stays empty.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "shellcheck-py>=0.10.0",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
]
bench = ["anthropic>=0.40"]

[project.scripts]
bully = "bully.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".pytest_cache", "bench/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long -- not critical, formatter handles obvious cases
    "SIM105", # contextlib.suppress: try/except is fine and stdlib-clearer
]

[tool.ruff.lint.per-file-ignores]
"src/bully/__init__.py" = ["F401", "E402"]
"src/bully/**/__init__.py" = ["F401"]
"tests/*" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
